[package]
name = "witch"
version = "0.1.0"
authors = ["Nathan Wash <nwash57@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gdnative = { git = "https://github.com/nwash57/godot-rust" }
gdnative = { path = "../../../godot-rust/gdnative" }

[lib]
crate-type = ["cdylib"]
